--- a/WordCounter/MainWindow.xaml
+++ b/WordCounter/MainWindow.xaml
@@ -11,7 +11,7 @@
         Foreground="White"
         FontSize="24"
         Title="Word Counter"
-        Height="350" Width="450" MinWidth="420" MinHeight="250">
+        Height="350" Width="500" MinWidth="500" MinHeight="250">
 
     <Window.DataContext>
         <viewModels:MainWindowViewModel/>
@@ -87,6 +87,8 @@
             Margin="0 10 0 0"
             HeadersVisibility="Column"
             BorderBrush="White"
+            AutoGenerateColumns="False"
+            ItemsSource="{Binding SortedList}"
             Background="{Binding ElementName=window, Path=Background}">
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="DataGridColumnHeader">
@@ -102,13 +104,15 @@
                 <DataGridTextColumn
                     CanUserSort="False"
                     Width="*"
-                    MinWidth="100"
+                    MinWidth="150"
+                    Binding="{Binding Key}"
                     Header="Word"/>
                 <DataGridTextColumn
                     CanUserSort="False"
                     Width="Auto"
-                    MinWidth="80"
-                    Header="Count"/>
+                    MinWidth="150"
+                    Binding="{Binding Value}"
+                    Header="Occurence"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
