--- a/WordCounter/MainWindow.xaml
+++ b/WordCounter/MainWindow.xaml
@@ -7,11 +7,11 @@
         xmlns:viewModels="clr-namespace:WordCounter.Lib.ViewModels;assembly=WordCounter.Lib"
         x:Name="window"
         mc:Ignorable="d"
-        Background="Gray"
-        Foreground="White"
+        Background="{StaticResource BackgroundColorBrush}"
+        Foreground="{StaticResource ForegroundColorBrush}"
         FontSize="24"
         Title="Word Counter"
-        Height="350" Width="500" MinWidth="500" MinHeight="250">
+        Height="350" Width="550" MinWidth="500" MinHeight="250">
 
     <Window.DataContext>
         <viewModels:MainWindowViewModel/>
@@ -19,9 +19,57 @@
 
     <Window.Resources>
         <Style TargetType="Button">
-            <Setter Property="Background" Value="{Binding ElementName=window, Path=Background}" />
-            <Setter Property="Foreground" Value="{Binding ElementName=window, Path=Foreground}" />
-            <Setter Property="BorderBrush" Value="White" />
+            <Setter Property="Background" Value="{StaticResource BackgroundColorBrush}" />
+            <Setter Property="Foreground" Value="{StaticResource ForegroundColorBrush}" />
+            <Setter Property="BorderBrush" Value="{StaticResource ForegroundColorBrush}" />
+            <Setter Property="Width" Value="120" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid
+                            Width="{TemplateBinding Width}"
+                            Height="{TemplateBinding Height}"
+                            ClipToBounds="True">
+                            <Rectangle
+                                x:Name="rect"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Stroke="{TemplateBinding Foreground}"
+                                StrokeThickness="1"
+                                Fill="Transparent"/>
+                            <DockPanel
+                                Name="myContentPresenterDockPanel">
+                                <ContentPresenter
+                                    x:Name="myContentPresenter"
+                                    Margin="0 5"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    Content="{TemplateBinding  Content}"
+                                    TextBlock.Foreground="{TemplateBinding Foreground}" />
+                            </DockPanel>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="rect" Property="Fill" Value="#39393a"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="rect" Property="Fill" Value="#454550"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="CenteredCellStyle" TargetType="{x:Type DataGridCell}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type DataGridCell}">
+                        <Grid Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Window.Resources>
     
@@ -46,8 +94,8 @@
             FontSize="16"
             VerticalContentAlignment="Center"
             Margin="10 0"
-            Background="{Binding ElementName=window, Path=Background}"
-            Foreground="{Binding ElementName=window, Path=Foreground}"/>
+            Background="{StaticResource BackgroundColorBrush}"
+            Foreground="{StaticResource ForegroundColorBrush}"/>
         <Button
             x:Name="browseButton"
             Content="Browse"
@@ -64,12 +112,13 @@
             Grid.Row="1"
             Grid.Column="1"
             Value="{Binding ProgressPercentage}"
-            Background="White"
+            Maximum="100"
+            Background="{StaticResource ForegroundColorBrush}"
             Margin="10 10 10 0"/>
         <TextBlock
             Grid.Row="1"
             Grid.Column="1"
-            Foreground="Blue"
+            Foreground="{StaticResource BackgroundColorBrush}"
             Margin="0 10 0 0"
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
@@ -86,17 +135,20 @@
             Grid.ColumnSpan="3"
             Margin="0 10 0 0"
             HeadersVisibility="Column"
-            BorderBrush="White"
+            BorderBrush="{StaticResource ForegroundColorBrush}"
             AutoGenerateColumns="False"
+            Foreground="{StaticResource ForegroundColorBrush}"
             ItemsSource="{Binding SortedList}"
-            Background="{Binding ElementName=window, Path=Background}">
+            Background="{StaticResource BackgroundColorBrush}"
+            RowBackground="{StaticResource BackgroundColorBrush}"
+            AlternatingRowBackground="{StaticResource MediumBackgroundColorBrush}">
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="DataGridColumnHeader">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
                     <Setter Property="FontSize" Value="22" />
                     <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=Background}" />
-                    <Setter Property="Foreground" Value="White" />
-                    <Setter Property="BorderBrush" Value="White" />
+                    <Setter Property="Foreground" Value="{StaticResource ForegroundColorBrush}" />
+                    <Setter Property="BorderBrush" Value="{StaticResource ForegroundColorBrush}" />
                     <Setter Property="BorderThickness" Value="1 1 1 2" />
                 </Style>
             </DataGrid.ColumnHeaderStyle>
@@ -111,8 +163,9 @@
                     CanUserSort="False"
                     Width="Auto"
                     MinWidth="150"
+                    CellStyle="{StaticResource CenteredCellStyle}"
                     Binding="{Binding Value}"
-                    Header="Occurence"/>
+                    Header="Occurance"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
