--- a/WordCounter/MainWindow.xaml
+++ b/WordCounter/MainWindow.xaml
@@ -135,6 +135,12 @@
             Grid.ColumnSpan="3"
             Margin="0 10 0 0"
             HeadersVisibility="Column"
+            VerticalScrollBarVisibility="Auto"
+            HorizontalScrollBarVisibility="Auto"
+            ScrollViewer.CanContentScroll="True"
+            VirtualizingPanel.IsVirtualizing="True"
+            EnableRowVirtualization="True"
+            EnableColumnVirtualization="True"
             BorderBrush="{StaticResource ForegroundColorBrush}"
             AutoGenerateColumns="False"
             Foreground="{StaticResource ForegroundColorBrush}"
@@ -158,14 +164,26 @@
                     Width="*"
                     MinWidth="150"
                     Binding="{Binding Key}"
-                    Header="Word"/>
+                    Header="Word">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextTrimming" Value="CharacterEllipsis"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn
                     CanUserSort="False"
                     Width="Auto"
                     MinWidth="150"
                     CellStyle="{StaticResource CenteredCellStyle}"
                     Binding="{Binding Value}"
-                    Header="Occurance"/>
+                    Header="Occurance">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextTrimming" Value="CharacterEllipsis"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
